# mcp-sec

./: .coverage  .gitignore  Dockerfile.test  Dockerfile.test.example  E2E.md  LICENSE  Makefile  README.md  WARP.md  coverage.xml  docker-compose.test.yml.example  mcp_pki_auth_prd_frd.md  mcp_pki_research_paper.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/mcp_pki_auth/: __init__.py  acl_manager.py  audit.py  auth_engine.py  config.py  exceptions.py  key_manager.py  protocol.py  transport.py
src/mcp_pki_auth/cli/: __init__.py  allowlist.py  keygen.py
test-keys/: cli-test.pem  cli-test.pub  client-test.pem  client-test.pub  test-allowlist.json  test-server.pem  test-server.pub
tests/: __init__.py
tests/integration/: __init__.py  test_auth_flow.py
tests/unit/: __init__.py  test_key_manager.py
